--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -76,7 +76,7 @@ textarea {
   }
 }
 
-a.linkedin-link {
+a.page-link {
   color: #ffe77a;
   text-decoration: none;
 
